--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -32,7 +32,11 @@ $inputRange-c5: #F7E91B;
 
   .QuestText {
     background-color: #EEEEEE;
-    padding: 20px;
+    padding: 15px;
+
+    @media (min-width: 360px) {
+      padding: 20px;
+    }
 
     .QuestText__Container {
       @include container(768px);
@@ -45,11 +49,13 @@ $inputRange-c5: #F7E91B;
       }
       .QuestTitle {
         color: #474747;
-        font-size: 29px;
+        font-size: 27px;
         font-weight: bold;
         line-height: 35px;
         text-transform: uppercase;
-        //word-break: break-all;
+        @media (min-width: 360px) {
+          font-size: 29px;
+        }
       }
       .QuestDescription {
         opacity: 0.7;
@@ -71,11 +77,15 @@ $inputRange-c5: #F7E91B;
     @include container(768px);
 
     .QuestAnswers {
-      padding: 20px;
-      //min-height: 120px;
+      padding: 20px 15px;
       height: 130px;
       text-align: center;
-      //margin-bottom: 40px;
+
+      @media (min-width: 360px) {
+        padding: 20px;
+      }
+
+
       .QuestAnswerLevel {
         color: #59C188;
         font-size: 23px;
@@ -91,11 +101,15 @@ $inputRange-c5: #F7E91B;
     }
 
     .QuestRangeSliderWrp {
-      padding: 40px 20px 20px;
+      padding: 40px 15px 20px;
       //height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
+
+      @media (min-width: 360px) {
+        padding: 40px 20px 20px;
+      }
 
       &.QuestRangeSliderWrp--100 {
         :global {
