--- a/src/global.scss
+++ b/src/global.scss
@@ -949,11 +949,31 @@ t
     }
 
     .allResultsListWrp {
-
-        margin: 15px 0;
-
+        padding: 40px 20px;
         .details {
-            padding-bottom: 10px;
+            cursor: pointer;
+            margin: 15px 0 40px;
+            padding-bottom: 2px;
+            border-bottom: 2px dashed #ccc;
+            font-size: 24px;
+            sub {
+                font-size: 14px;
+            }
+            a {
+                display: none;
+                padding-left: 10px;
+            }
+            &:hover {
+                background-color: #efefef;
+                a {
+                    display: inline;
+                }
+            }
+            ul {
+                li {
+                    font-size: 16px;
+                }
+            }
         }
     }
 
