--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -25,6 +25,14 @@
                         width: 30px;
                         height: 25px;
                         background-size: 100%;
+                        @media (min-width: 480px) {
+                            width: 38px;
+                            height: 30px;
+                        }
+                        @media (min-width: 768px) {
+                            width: 50px;
+                            height: 40px;
+                        }
                     }
                 }
 
