prepare to tests after delete antd styles

--- a/src/global.scss
+++ b/src/global.scss
@@ -410,7 +410,8 @@ $inputRange-c5: #F7E91B;
             display: inline-block;
             font-size: 16px;
             text-transform: uppercase;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);
+            //box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);
+            box-shadow: 0px 20px 24px -15px rgba(0,0,0,0.20);
             margin-bottom: 30px;
 
 
