--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -175,7 +175,290 @@ $inputRange-c5: #F7E91B;
 
 }
 
+// antd original files
+:global {
+  ///
 
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+  }
+  input::-ms-clear,
+  input::-ms-reveal {
+    display: none;
+  }
+  *,
+  *::before,
+  *::after {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  html {
+    //font-family: sans-serif;
+    //line-height: 1.15;
+    //-webkit-text-size-adjust: 100%;
+    //-ms-text-size-adjust: 100%;
+    //-ms-overflow-style: scrollbar;
+    //-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
+  article,
+  aside,
+  dialog,
+  figcaption,
+  figure,
+  footer,
+  header,
+  hgroup,
+  main,
+  nav,
+  section {
+    display: block;
+  }
+  body {
+    margin: 0;
+    font-variant: tabular-nums;
+  }
+  [tabindex='-1']:focus {
+    outline: none !important;
+  }
+  hr {
+    -webkit-box-sizing: content-box;
+    box-sizing: content-box;
+    height: 0;
+    overflow: visible;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 0;
+    margin-bottom: 0.5em;
+    color: rgba(0, 0, 0, 0.85);
+    font-weight: 500;
+  }
+  p {
+    margin-top: 0;
+    margin-bottom: 1em;
+  }
+  abbr[title],
+  abbr[data-original-title] {
+    text-decoration: underline;
+    -webkit-text-decoration: underline dotted;
+    text-decoration: underline dotted;
+    border-bottom: 0;
+    cursor: help;
+  }
+  address {
+    margin-bottom: 1em;
+    font-style: normal;
+    line-height: inherit;
+  }
+  input[type='text'],
+  input[type='password'],
+  input[type='number'],
+  textarea {
+    -webkit-appearance: none;
+  }
+  ol,
+  ul,
+  dl {
+    margin-top: 0;
+    margin-bottom: 1em;
+  }
+  ol ol,
+  ul ul,
+  ol ul,
+  ul ol {
+    margin-bottom: 0;
+  }
+  dt {
+    font-weight: 500;
+  }
+  dd {
+    margin-bottom: 0.5em;
+    margin-left: 0;
+  }
+  blockquote {
+    margin: 0 0 1em;
+  }
+  dfn {
+    font-style: italic;
+  }
+  b,
+  strong {
+    font-weight: bolder;
+  }
+  small {
+    font-size: 80%;
+  }
+  sub,
+  sup {
+    position: relative;
+    font-size: 75%;
+    line-height: 0;
+    vertical-align: baseline;
+  }
+  sub {
+    bottom: -0.25em;
+  }
+  sup {
+    top: -0.5em;
+  }
+  a {
+    color: #1890ff;
+    text-decoration: none;
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+    -webkit-transition: color 0.3s;
+    transition: color 0.3s;
+    -webkit-text-decoration-skip: objects;
+  }
+  a:hover {
+    color: #40a9ff;
+  }
+  a:active {
+    color: #096dd9;
+  }
+  a:active,
+  a:hover {
+    text-decoration: none;
+    outline: 0;
+  }
+  a[disabled] {
+    color: rgba(0, 0, 0, 0.25);
+    cursor: not-allowed;
+    pointer-events: none;
+  }
+  pre,
+  code,
+  kbd,
+  samp {
+    font-size: 1em;
+    font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+  }
+  pre {
+    margin-top: 0;
+    margin-bottom: 1em;
+    overflow: auto;
+  }
+  figure {
+    margin: 0 0 1em;
+  }
+  img {
+    vertical-align: middle;
+    border-style: none;
+  }
+  svg:not(:root) {
+    overflow: hidden;
+  }
+  a,
+  area,
+  button,
+  [role='button'],
+  input:not([type='range']),
+  label,
+  select,
+  summary,
+  textarea {
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+  }
+
+  ////
+  .ant-slider {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: rgba(0, 0, 0, 0.65);
+    font-size: 14px;
+    font-variant: tabular-nums;
+    line-height: 1.5;
+    list-style: none;
+    -webkit-font-feature-settings: 'tnum';
+    font-feature-settings: 'tnum';
+    position: relative;
+    height: 12px;
+    margin: 14px 6px 10px;
+    padding: 4px 0;
+    cursor: pointer;
+    -ms-touch-action: none;
+    touch-action: none;
+  }
+
+  .ant-slider-rail {
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: #f5f5f5;
+    border-radius: 2px;
+    -webkit-transition: background-color 0.3s;
+    transition: background-color 0.3s;
+  }
+
+  .ant-slider-track {
+    position: absolute;
+    height: 4px;
+    background-color: #91d5ff;
+    border-radius: 4px;
+    -webkit-transition: background-color 0.3s;
+    transition: background-color 0.3s;
+  }
+
+  .ant-slider-step {
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background: transparent;
+  }
+
+  .ant-slider-handle {
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    margin-top: -5px;
+    background-color: #fff;
+    border: solid 2px #91d5ff;
+    border-radius: 50%;
+    -webkit-box-shadow: 0;
+    box-shadow: 0;
+    cursor: pointer;
+    -webkit-transition: border-color 0.3s, -webkit-box-shadow 0.6s, -webkit-transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+    transition: border-color 0.3s, -webkit-box-shadow 0.6s, -webkit-transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+    transition: border-color 0.3s, box-shadow 0.6s, transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+    transition: border-color 0.3s, box-shadow 0.6s, transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28), -webkit-box-shadow 0.6s, -webkit-transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+  }
+
+  .ant-slider-handle:focus {
+    border-color: #46a6ff;
+    outline: none;
+    -webkit-box-shadow: 0 0 0 5px rgba(24, 144, 255, 0.2);
+    box-shadow: 0 0 0 5px rgba(24, 144, 255, 0.2);
+  }
+
+  .ant-slider-handle:focus {
+    border-color: #46a6ff;
+    outline: none;
+    -webkit-box-shadow: 0 0 0 5px rgba(24, 144, 255, 0.2);
+    box-shadow: 0 0 0 5px rgba(24, 144, 255, 0.2);
+  }
+
+  .ant-slider-mark {
+    position: absolute;
+    top: 14px;
+    left: 0;
+    width: 100%;
+    font-size: 14px;
+  }
+
+}
+
+
+// antd custom styles
 :global {
   .ant-slider-handle {
     height: 50px;
@@ -365,61 +648,3 @@ $inputRange-c5: #F7E91B;
 
 
 
-
-// .ant-slider - обёртка
-// 0 - 50, 360
-// width: calc(100% - 50px);
-// margin: 0 50px;
-//@media (min-width: 360px) {
-//  width: calc(100% - 62px);
-// margin: 0 62px;
-//}
-//
-//@media (min-width: 480px) {
-// width: calc(100% - 80px);
-// margin: 0 80px;
-//}
-//
-//@media (min-width: 768px) {
-// width: calc(100% - 92px);
-// margin: 0 92px;
-//}
-
-// .ant-slider-handle - кружок
-// height: 50px;
-//  width: 52px;
-//@media (min-width: 360px) {
-//  height: 62px;
-//  width: 62px;
-//  margin-top: -23px;
-//}
-//
-//@media (min-width: 480px) {
-//  height: 80px;
-//  width: 80px;
-//  margin-top: -30px;
-//}
-//
-//@media (min-width: 768px) {
-//  height: 92px;
-//  width: 92px;
-//  margin-top: -35px;
-//}
-
-
-// .ant-slider-rail - трек
-// width: calc(100% + 50px);     margin: 0 -25px;
-//@media (min-width: 360px) {
-//width: calc(100% + 62px);
-//margin: 0 -31px;
-//}
-//
-//@media (min-width: 480px) {
-//width: calc(100% + 80px);
-//margin: 0 -40px;
-//}
-//
-//@media (min-width: 768px) {
-//width: calc(100% + 92px);
-//margin: 0 -46px;
-//}
