--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -177,198 +177,6 @@ $inputRange-c5: #F7E91B;
 
 // antd original files
 :global {
-  ///
-
-  html,
-  body {
-    width: 100%;
-    height: 100%;
-  }
-  input::-ms-clear,
-  input::-ms-reveal {
-    display: none;
-  }
-  *,
-  *::before,
-  *::after {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  html {
-    //font-family: sans-serif;
-    //line-height: 1.15;
-    //-webkit-text-size-adjust: 100%;
-    //-ms-text-size-adjust: 100%;
-    //-ms-overflow-style: scrollbar;
-    //-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  }
-  article,
-  aside,
-  dialog,
-  figcaption,
-  figure,
-  footer,
-  header,
-  hgroup,
-  main,
-  nav,
-  section {
-    display: block;
-  }
-  body {
-    margin: 0;
-    font-variant: tabular-nums;
-  }
-  [tabindex='-1']:focus {
-    outline: none !important;
-  }
-  hr {
-    -webkit-box-sizing: content-box;
-    box-sizing: content-box;
-    height: 0;
-    overflow: visible;
-  }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin-top: 0;
-    margin-bottom: 0.5em;
-    color: rgba(0, 0, 0, 0.85);
-    font-weight: 500;
-  }
-  p {
-    margin-top: 0;
-    margin-bottom: 1em;
-  }
-  abbr[title],
-  abbr[data-original-title] {
-    text-decoration: underline;
-    -webkit-text-decoration: underline dotted;
-    text-decoration: underline dotted;
-    border-bottom: 0;
-    cursor: help;
-  }
-  address {
-    margin-bottom: 1em;
-    font-style: normal;
-    line-height: inherit;
-  }
-  input[type='text'],
-  input[type='password'],
-  input[type='number'],
-  textarea {
-    -webkit-appearance: none;
-  }
-  ol,
-  ul,
-  dl {
-    margin-top: 0;
-    margin-bottom: 1em;
-  }
-  ol ol,
-  ul ul,
-  ol ul,
-  ul ol {
-    margin-bottom: 0;
-  }
-  dt {
-    font-weight: 500;
-  }
-  dd {
-    margin-bottom: 0.5em;
-    margin-left: 0;
-  }
-  blockquote {
-    margin: 0 0 1em;
-  }
-  dfn {
-    font-style: italic;
-  }
-  b,
-  strong {
-    font-weight: bolder;
-  }
-  small {
-    font-size: 80%;
-  }
-  sub,
-  sup {
-    position: relative;
-    font-size: 75%;
-    line-height: 0;
-    vertical-align: baseline;
-  }
-  sub {
-    bottom: -0.25em;
-  }
-  sup {
-    top: -0.5em;
-  }
-  a {
-    color: #1890ff;
-    text-decoration: none;
-    background-color: transparent;
-    outline: none;
-    cursor: pointer;
-    -webkit-transition: color 0.3s;
-    transition: color 0.3s;
-    -webkit-text-decoration-skip: objects;
-  }
-  a:hover {
-    color: #40a9ff;
-  }
-  a:active {
-    color: #096dd9;
-  }
-  a:active,
-  a:hover {
-    text-decoration: none;
-    outline: 0;
-  }
-  a[disabled] {
-    color: rgba(0, 0, 0, 0.25);
-    cursor: not-allowed;
-    pointer-events: none;
-  }
-  pre,
-  code,
-  kbd,
-  samp {
-    font-size: 1em;
-    font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
-  }
-  pre {
-    margin-top: 0;
-    margin-bottom: 1em;
-    overflow: auto;
-  }
-  figure {
-    margin: 0 0 1em;
-  }
-  img {
-    vertical-align: middle;
-    border-style: none;
-  }
-  svg:not(:root) {
-    overflow: hidden;
-  }
-  a,
-  area,
-  button,
-  [role='button'],
-  input:not([type='range']),
-  label,
-  select,
-  summary,
-  textarea {
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-  }
-
-  ////
   .ant-slider {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -461,9 +269,13 @@ $inputRange-c5: #F7E91B;
 // antd custom styles
 :global {
   .ant-slider-handle {
-    height: 50px;
-    width: 52px;
-    margin-top: -18px;
+    height: 58px;
+    width: 58px;
+    margin-top: -22px;
+
+    //height: 62px;
+    //width: 62px;
+    //margin-top: -23px;
     background-color: #59C188;
     position: relative;
     border: none;
@@ -472,6 +284,7 @@ $inputRange-c5: #F7E91B;
       box-shadow: none;
       border: none;
     }
+
 
     &:after {
       content: "?";
@@ -487,22 +300,24 @@ $inputRange-c5: #F7E91B;
       top: 50%;
       transform: translate(-50%, -50%);
     }
-    @media (min-width: 360px) {
-      height: 62px;
-      width: 62px;
-      margin-top: -23px;
-    }
 
-    @media (min-width: 400px) {
+    // ROUND SIZE
+    @media (min-width: 360px) {
       height: 70px;
       width: 70px;
       margin-top: -27px;
     }
 
-    @media (min-width: 480px) {
-      height: 80px;
-      width: 80px;
-      margin-top: -30px;
+    @media (min-width: 400px) {
+      height: 82px;
+      width: 84px;
+      margin-top: -32px;
+    }
+
+    @media (min-width: 480px) {;
+      height: 92px;
+      width: 92px;
+      margin-top: -35px;
     }
 
     @media (min-width: 768px) {
@@ -551,6 +366,8 @@ $inputRange-c5: #F7E91B;
     //  width: calc(100% + 90px);
     //}
 
+
+    // RAIL TRACK RANGE SIZE
     @media (min-width: 360px) {
       width: calc(100% + 62px);
       margin: 0 -31px;
@@ -561,6 +378,7 @@ $inputRange-c5: #F7E91B;
     }
 
     @media (min-width: 480px) {
+      height: 18px;
       width: calc(100% + 80px);
       margin: 0 -40px;
     }
