--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -25,9 +25,14 @@
                         width: 30px;
                         height: 25px;
                         background-size: 100%;
+                        // CHECK ICON SIZE
+                        @media (min-width: 400px) {
+                            width: 36px;
+                            height: 28px;
+                        }
                         @media (min-width: 480px) {
-                            width: 38px;
-                            height: 30px;
+                            width: 44px;
+                            height: 35px;
                         }
                         @media (min-width: 768px) {
                             width: 50px;
@@ -46,6 +51,19 @@
                         background-image: none;
                         width: auto;
                         height: auto;
+                        // QUEST ? ICON SIZE
+                        @media (min-width: 360px) {
+                            font-size: 36px;
+                        }
+                        @media (min-width: 400px) {
+                            font-size: 46px;
+                        }
+                        @media (min-width: 480px) {
+                            font-size: 54px;
+                        }
+                        @media (min-width: 768px) {
+                            font-size: 58px;
+                        }
                     }
                 }
 
