--- a/src/global.scss
+++ b/src/global.scss
@@ -261,6 +261,202 @@ $inputRange-c5: #F7E91B;
 }
 
 :global {
+
+  ///antd original styles
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+  }
+  input::-ms-clear,
+  input::-ms-reveal {
+    display: none;
+  }
+  *,
+  *::before,
+  *::after {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  html {
+    //font-family: sans-serif;
+    //line-height: 1.15;
+    //-webkit-text-size-adjust: 100%;
+    //-ms-text-size-adjust: 100%;
+    //-ms-overflow-style: scrollbar;
+    //-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
+  article,
+  aside,
+  dialog,
+  figcaption,
+  figure,
+  footer,
+  header,
+  hgroup,
+  main,
+  nav,
+  section {
+    display: block;
+  }
+  body {
+    margin: 0;
+    font-variant: tabular-nums;
+    line-height: 1.5;
+  }
+  [tabindex='-1']:focus {
+    outline: none !important;
+  }
+  hr {
+    -webkit-box-sizing: content-box;
+    box-sizing: content-box;
+    height: 0;
+    overflow: visible;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 0;
+    margin-bottom: 0.5em;
+    color: rgba(0, 0, 0, 0.85);
+    font-weight: 500;
+  }
+  p {
+    margin-top: 0;
+    margin-bottom: 1em;
+  }
+  abbr[title],
+  abbr[data-original-title] {
+    text-decoration: underline;
+    -webkit-text-decoration: underline dotted;
+    text-decoration: underline dotted;
+    border-bottom: 0;
+    cursor: help;
+  }
+  address {
+    margin-bottom: 1em;
+    font-style: normal;
+    line-height: inherit;
+  }
+  input[type='text'],
+  input[type='password'],
+  input[type='number'],
+  textarea {
+    -webkit-appearance: none;
+  }
+  ol,
+  ul,
+  dl {
+    margin-top: 0;
+    margin-bottom: 1em;
+  }
+  ol ol,
+  ul ul,
+  ol ul,
+  ul ol {
+    margin-bottom: 0;
+  }
+  dt {
+    font-weight: 500;
+  }
+  dd {
+    margin-bottom: 0.5em;
+    margin-left: 0;
+  }
+  blockquote {
+    margin: 0 0 1em;
+  }
+  dfn {
+    font-style: italic;
+  }
+  b,
+  strong {
+    font-weight: bolder;
+  }
+  small {
+    font-size: 80%;
+  }
+  sub,
+  sup {
+    position: relative;
+    font-size: 75%;
+    line-height: 0;
+    vertical-align: baseline;
+  }
+  sub {
+    bottom: -0.25em;
+  }
+  sup {
+    top: -0.5em;
+  }
+  a {
+    color: #1890ff;
+    text-decoration: none;
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+    -webkit-transition: color 0.3s;
+    transition: color 0.3s;
+    -webkit-text-decoration-skip: objects;
+  }
+  a:hover {
+    color: #40a9ff;
+  }
+  a:active {
+    color: #096dd9;
+  }
+  a:active,
+  a:hover {
+    text-decoration: none;
+    outline: 0;
+  }
+  a[disabled] {
+    color: rgba(0, 0, 0, 0.25);
+    cursor: not-allowed;
+    pointer-events: none;
+  }
+  pre,
+  code,
+  kbd,
+  samp {
+    font-size: 1em;
+    font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+  }
+  pre {
+    margin-top: 0;
+    margin-bottom: 1em;
+    overflow: auto;
+  }
+  figure {
+    margin: 0 0 1em;
+  }
+  img {
+    vertical-align: middle;
+    border-style: none;
+  }
+  svg:not(:root) {
+    overflow: hidden;
+  }
+  a,
+  area,
+  button,
+  [role='button'],
+  input:not([type='range']),
+  label,
+  select,
+  summary,
+  textarea {
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    font-family: 'Montserrat', sans-serif !important;
+    line-height: 1.5;
+  }
+
+  ////
+
     .outerWrp {
         //max-width: 500px;
         margin: 0px auto 0 ;
