--- a/src/global.scss
+++ b/src/global.scss
@@ -329,14 +329,6 @@ $inputRange-c5: #F7E91B;
     margin-top: 0;
     margin-bottom: 1em;
   }
-  abbr[title],
-  abbr[data-original-title] {
-    text-decoration: underline;
-    -webkit-text-decoration: underline dotted;
-    text-decoration: underline dotted;
-    border-bottom: 0;
-    cursor: help;
-  }
   address {
     margin-bottom: 1em;
     font-style: normal;
@@ -347,6 +339,10 @@ $inputRange-c5: #F7E91B;
   input[type='number'],
   textarea {
     -webkit-appearance: none;
+  }
+  input:focus {
+    box-shadow: 0 0 2px 1px #77AFA7;
+    outline: none;
   }
   ol,
   ul,
@@ -688,6 +684,14 @@ $inputRange-c5: #F7E91B;
                 font-weight:400;
             }
 
+
+          &:focus {
+            box-shadow: 0 0 2px 1px #77AFA7;
+            outline: none;
+          }
+          &.error {
+            box-shadow: inset 0 0 0px 2px red;
+          }
         }
 
         .namePageBtn {
@@ -815,10 +819,16 @@ $inputRange-c5: #F7E91B;
                     }
                     input {
                         margin: 0 auto 16px;
+                        &.error {
+                          box-shadow: inset 0 0 0px 2px red;
+                        }
                     }
                     .compareBtn {
                         display: block;
                         margin: 0 auto 16px;
+                        &.resultPageBtnAnimated {
+                          animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+                        }
                     }
                 }
             }
@@ -1170,6 +1180,9 @@ t
                             span svg path {
                                 fill: #aaa !important;
                             }
+                        }
+                        &.sendBtnAnimated {
+                          animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
                         }
                     }
                 }
