--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -171,7 +171,7 @@
 
 @media screen and (min-width: 768px) {
     .Menu {
-
+        padding: 0 20px;
         &.opened {
             background-color: #fff;
         }
@@ -180,7 +180,7 @@
             .Menu__Container {max-width: 768px;}
         }
         &.wideMenu {
-            .Menu__Container {max-width: 1140px;}
+            .Menu__Container {max-width: 992px;}
         }
 
         .Menu__Container {
@@ -188,6 +188,7 @@
             margin: 0 auto;
             width: 100%;
             position: relative;
+            padding: 0;
         }
 
         input.hamburgerCheker:checked ~ .Menu__Container {;
@@ -206,8 +207,16 @@
 
 @media screen and (min-width: 992px) {
     .Menu {
-        .Menu__Container {
-            padding: 0;
+
+        &.wideMenu {
+            .Menu__Container {max-width: 1140px;}
         }
+
+
+
+        .Menu__Container {
+            //padding: 0;
+        }
+
     }
 }
