--- a/src/global.scss
+++ b/src/global.scss
@@ -923,6 +923,11 @@ $inputRange-c5: #F7E91B;
       text-align: center;
     }
 
+    h2.error {
+      color: tomato;
+      text-align: center;
+    }
+
 
     .compareResultsNames {
 
