================= V 1.0 =============== (remove useless code, fix bug with touch on mobile)

--- a/src/global.scss
+++ b/src/global.scss
@@ -161,6 +161,14 @@ $breakpoints: (
     &:-ms-input-placeholder      {@content}
 }
 
+@mixin cursorPointer() {
+  @media (hover: hover) {
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
 $baseMargBottom: 32px;
 $basePadTop: 75px;
 
