--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -19,6 +19,15 @@ $inputRange-c5: #F7E91B;
   width: 100%;
 }
 
+
+@mixin cursorPointer() {
+  @media(pointer: fine) {
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
 .QuestWrp {
 
 }
@@ -148,7 +157,6 @@ $inputRange-c5: #F7E91B;
         line-height: 28px;
         margin-bottom: 10px;
         text-transform: uppercase;
-        // TODO: увеличить шрифты для 360+
         @media (min-width: 360px) {
           font-size: 26px;
           margin-bottom: 12px;
@@ -169,7 +177,6 @@ $inputRange-c5: #F7E91B;
       .QuestAnswerDescr {
         font-size: 15px;
         line-height: 21px;
-        // TODO: увеличить шрифты для 360+
         @media (min-width: 360px) {
           font-size: 16px;
           line-height: 1.4em;
@@ -205,50 +212,50 @@ $inputRange-c5: #F7E91B;
 
       &.QuestRangeSliderWrp--100 {
         :global {
-          .ant-slider-rail {
+          .rc-slider-rail {
             @include inputRangeBg($inputRange-c1, #eee, #eee, #eee, #eee);
           }
-          .ant-slider-handle {
+          .rc-slider-handle {
             background-color: $inputRange-c1;
           }
         }
       }
       &.QuestRangeSliderWrp--200 {
         :global {
-          .ant-slider-rail {
+          .rc-slider-rail {
             @include inputRangeBg($inputRange-c1, $inputRange-c2, #eee, #eee, #eee);
           }
-          .ant-slider-handle {
+          .rc-slider-handle {
             background-color: $inputRange-c2;
           }
         }
       }
       &.QuestRangeSliderWrp--300 {
         :global {
-          .ant-slider-rail {
+          .rc-slider-rail {
             @include inputRangeBg($inputRange-c1, $inputRange-c2, $inputRange-c3, #eee, #eee);
           }
-          .ant-slider-handle {
+          .rc-slider-handle {
             background-color: $inputRange-c3;
           }
         }
       }
       &.QuestRangeSliderWrp--400 {
         :global {
-          .ant-slider-rail {
+          .rc-slider-rail {
             @include inputRangeBg($inputRange-c1, $inputRange-c2, $inputRange-c3, $inputRange-c4, #eee);
           }
-          .ant-slider-handle {
+          .rc-slider-handle {
             background-color: $inputRange-c4;
           }
         }
       }
       &.QuestRangeSliderWrp--500 {
         :global {
-          .ant-slider-rail {
+          .rc-slider-rail {
             @include inputRangeBg($inputRange-c1, $inputRange-c2, $inputRange-c3, $inputRange-c4, $inputRange-c5);
           }
-          .ant-slider-handle {
+          .rc-slider-handle {
             background-color: $inputRange-c5;
           }
         }
@@ -263,7 +270,8 @@ $inputRange-c5: #F7E91B;
 
 // antd original files
 :global {
-  .ant-slider {
+
+  .rc-slider {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     color: rgba(0, 0, 0, 0.65);
@@ -277,12 +285,12 @@ $inputRange-c5: #F7E91B;
     height: 12px;
     margin: 14px 6px 10px;
     padding: 4px 0;
-    cursor: pointer;
+    @include cursorPointer();
     -ms-touch-action: none;
     touch-action: none;
   }
 
-  .ant-slider-rail {
+  .rc-slider-rail {
     position: absolute;
     width: 100%;
     height: 4px;
@@ -292,7 +300,7 @@ $inputRange-c5: #F7E91B;
     transition: background-color 0.3s;
   }
 
-  .ant-slider-track {
+  .rc-slider-track {
     position: absolute;
     height: 4px;
     background-color: #91d5ff;
@@ -301,14 +309,14 @@ $inputRange-c5: #F7E91B;
     transition: background-color 0.3s;
   }
 
-  .ant-slider-step {
+  .rc-slider-step {
     position: absolute;
     width: 100%;
     height: 4px;
     background: transparent;
   }
 
-  .ant-slider-handle {
+  .rc-slider-handle {
     position: absolute;
     width: 14px;
     height: 14px;
@@ -318,28 +326,28 @@ $inputRange-c5: #F7E91B;
     border-radius: 50%;
     -webkit-box-shadow: 0;
     box-shadow: 0;
-    cursor: pointer;
+    @include cursorPointer();
     -webkit-transition: border-color 0.3s, -webkit-box-shadow 0.6s, -webkit-transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
     transition: border-color 0.3s, -webkit-box-shadow 0.6s, -webkit-transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
     transition: border-color 0.3s, box-shadow 0.6s, transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
     transition: border-color 0.3s, box-shadow 0.6s, transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28), -webkit-box-shadow 0.6s, -webkit-transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
   }
 
-  .ant-slider-handle:focus {
+  .rc-slider-handle:focus {
     border-color: #46a6ff;
     outline: none;
     -webkit-box-shadow: 0 0 0 5px rgba(24, 144, 255, 0.2);
     box-shadow: 0 0 0 5px rgba(24, 144, 255, 0.2);
   }
 
-  .ant-slider-handle:focus {
+  .rc-slider-handle:focus {
     border-color: #46a6ff;
     outline: none;
     -webkit-box-shadow: 0 0 0 5px rgba(24, 144, 255, 0.2);
     box-shadow: 0 0 0 5px rgba(24, 144, 255, 0.2);
   }
 
-  .ant-slider-mark {
+  .rc-slider-mark {
     position: absolute;
     top: 14px;
     left: 0;
@@ -352,7 +360,12 @@ $inputRange-c5: #F7E91B;
 
 // antd custom styles
 :global {
-  .ant-slider-handle {
+  .rc-slider {
+    div{
+      -webkit-tap-highlight-color: transparent;
+    }
+  }
+  .rc-slider-handle {
     height: 58px;
     width: 58px;
     margin-top: -22px;
@@ -411,7 +424,7 @@ $inputRange-c5: #F7E91B;
     }
   }
 
-  .ant-slider-rail {
+  .rc-slider-rail {
     height: 15px;
     margin: 0 -25px;
     width: calc(100% + 50px);
@@ -436,20 +449,6 @@ $inputRange-c5: #F7E91B;
                     #eee 0,
                     #eee
     );
-    //@media (min-width: 360px) {
-    //  max-width: 400px;
-    //  width: calc(100% + 62px);
-    //}
-    //@media (min-width: 480px) {
-    //  max-width: none;
-    //  width: calc(100% + 80px);
-    //}
-    //@media (min-width: 768px) {
-    //  height: 20px;
-    //  margin: 0 -45px;
-    //  width: calc(100% + 90px);
-    //}
-
 
     // RAIL TRACK RANGE SIZE
     @media (min-width: 360px) {
@@ -474,56 +473,24 @@ $inputRange-c5: #F7E91B;
     }
   }
 
-  .ant-slider-track {
+  .rc-slider-track {
     display: none;
     height: 15px;
     background-color: #7DD29D;
-    //margin: 0px -25px;
     box-sizing: unset;
     padding: 0px 25px;
     transform: translate(-25px, 0px);
-    //background: linear-gradient(
-    //                90deg,
-    //                #7DD29D 0,
-    //                #7DD29D 18%,
-    //                #fff 0,
-    //                #fff 20.5%,
-    //                #7DD29D 0,
-    //                #7DD29D 38.5%,
-    //                #fff 0,
-    //                #fff 41%,
-    //                #7DD29D 0,
-    //                #7DD29D 59%,
-    //                #fff 0,
-    //                #fff 61.5%,
-    //                #7DD29D 0,
-    //                #7DD29D 79.5%,
-    //                #fff 0,
-    //                #fff 82%,
-    //                #7DD29D 0,
-    //                #7DD29D
-    //);
   }
 
-  .ant-slider {
+  .rc-slider {
     margin: 0 25px;
     min-width: 200px;
     width: calc(100% - 50px);
     &:hover {
-      .ant-slider-track {
+      .rc-slider-track {
         background-color: #7DD29D;
       }
     }
-
-    //@media (min-width: 360px) {
-    //  margin: 0 32px;
-    //}
-    //@media (min-width: 480px) {
-    //  margin: 0 41px;
-    //}
-    //@media (min-width: 768px) {
-    //  margin: 0 50px;
-    //}
     @media (min-width: 360px) {
       max-width: 400px;
       width: calc(100% - 62px);
