--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -4,6 +4,15 @@
     width: 100%;
 }
 
+
+@mixin cursorPointer() {
+    @media(pointer: fine) {
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
+
 .Slider {
 
     display: flex;
@@ -18,7 +27,7 @@
         height: 100%;
         &.Slider__Container--IsChosen-true {
             :global {
-                .ant-slider-handle {
+                .rc-slider-handle {
                     &:after {
                         content: " ";
                         background-image: url("../../assets/svg/check.svg");
@@ -45,7 +54,7 @@
         }
         &.Slider__Container--IsChosen-false {
             :global {
-                .ant-slider-handle {
+                .rc-slider-handle {
                     &:after {
                         content: "?";
                         background-image: none;
@@ -99,7 +108,8 @@
             letter-spacing: 0.5px;
             padding: 12px;
             text-transform: uppercase;
-            cursor: pointer;
+            @include cursorPointer();
+            user-select: none;
 
                 span {
                     position: relative;
